﻿svs 26.06.2014 14:23:24 +0400 - build 3965

1. Mantis#0002692: Невозможно прервать операцию, если она запущена из макроса
   Откат build 3963 до лучших времен. Жуки вылезли.

w17 26.06.2014 00:16:21 +0400 - build 3964

1. Ещё уточнение 3956.
   Через Plugin API пока не работает.

2. M#2540: Viewer Search always starts from the beginning of the file
   НЕЗАВЕРШЕНО!

svs 25.06.2014 11:17:19 +0400 - build 3963

1. Mantis#0002692: Невозможно прервать операцию, если она запущена из макроса
   Закомметим и посмотрим.

w17 25.06.2014 00:16:56 +0400 - build 3962

1. Уточнение 3960.

drkns 24.06.2014 19:41:46 +0200 - build 3961

1. Уточнение 3958.

w17 24.06.2014 20:02:53 +0400 - build 3960

1. M#2706: При конвертировании в UTF-7 не обрабатываются ошибки

w17 23.06.2014 14:41:05 +0400 - build 3959

1. Уточнение 3956.

drkns 21.06.2014 15:51:25 +0200 - build 3958

1. При запуске по Far.exe /p%FARPROFILE%\Plugins не загружались плагины.

drkns 20.06.2014 20:12:27 +0200 - build 3957

1. Если плагин содержит на своей панели объекты с атрибутом FILE_ATTRIBUTE_REPARSE_POINT - считаем, что это симлинки.

w17 20.06.2014 13:46:02 +0400 - build 3956

1. Experimental. M#2684: Возможность смены кодировки путём перечитывания файла

drkns 19.06.2014 09:33:50 +0200 - build 3955

1. Потенциальная проблема в SyncedQueue и пара мелочей в Thread и MultiWaiter для улучшения читаемости.

drkns 19.06.2014 08:46:39 +0200 - build 3954

1. В 3842 погнулся запускатель в некоторых хитрых случаях.

zg 18.06.2014 10:56:30 +0200 - build 3953

1. после 3895 не работало alt-d в редакторе.

w17 16.06.2014 23:43:57 +0400 - build 3952

1. M#2708: Regexp "^(.*?\-\-)" != "^(.*?\-{2})"

shmuel 10.06.2014 11:38:11 +0200 - build 3951

1. Уточнение 3949.

shmuel 10.06.2014 00:45:54 +0200 - build 3950

1. При выгрузке плагина LuaMacro в результате exception ручная запись макросов запрещалась не сразу.

drkns 09.06.2014 22:12:24 +0200 - build 3949

1. Поддежка VS 14 (CTP), пока с варнингами.
