@@ -1,4 +1,12 @@
-﻿svs 26.06.2014 14:23:24 +0400 - build 3965
+﻿drkns 27.06.2014 19:53:08 +0200 - build 3966
+
+1. Восстановим поломанный GCC билд.
+
+2. GCC warning.
+
+3. Рефакторинг.
+
+svs 26.06.2014 14:23:24 +0400 - build 3965
 
 1. Mantis#0002692: Невозможно прервать операцию, если она запущена из макроса
    Откат build 3963 до лучших времен. Жуки вылезли.
